# Search-Engine

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  check-system.sh  docker-compose.dev.yml  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile  README.md  db.js  nodemon.json  package.json  server.js  userPreferences.js
crawler/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  crawler.cpp
frontend/: Dockerfile  index.html
frontend/src/: App.jsx  Home.jsx  ImageSearchResult.jsx  TextSearchResults.jsx  index.css
